--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,19 @@
             rgba(46, 47, 66, 0.7));
             --timing-function:250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
 
 p,
 h1,
@@ -535,7 +547,53 @@ transition: background-color var(--timing-function);
 .footer-soc-link:focus {
     background-color: #31D0AA;
 }
+.footer-sub {
+    margin-left: auto;
+}
+.footer-title {
+    font-weight: 500;
+font-size: 16px;
+line-height: 24px;
+margin-bottom: 16px;
+letter-spacing: 0.02em;
 
+}
+.footer-form {
+    display: flex;
+    align-items: center;
+}
+.footer-input {
+    width: 264px;
+    height: 40px;
+    border: 1px solid #FFFFFF;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    margin-right: 24px;
+    border-radius: 4px;
+    color: #FFFFFF;
+}
+.footer-button {
+    min-width: 165px;
+    height: 40px;
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+    background-color: #4D5AE5;
+    border-radius: 4px;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+}
+.footer-sub-icon {
+    fill: #FFFFFF;
+}
 
 /* Portfolio */
 .button {}
@@ -665,6 +723,7 @@ transition: transform var(--timing-function);
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
     transition: transform var(--timing-function);
+    padding: 72px 24px 24px;
 }
 .btn-close-modal {position:absolute; 
     cursor: pointer;
@@ -712,4 +771,112 @@ transition:opacity var(--timing-function), visibility var(--timing-function) ;
     pointer-events: none;
 
 
+}
+.modal-title {
+    text-align: center;
+    font-weight: 500;
+    line-height: 1.5;
+    color: #2E2F42;
+    margin-bottom: 16px;
+}
+.modal-fild {
+    margin-bottom: 8px;
+}
+.modal-fild.texteria-fild {
+    margin-bottom: 16px;
+}
+.modal-label {
+    font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+color: #8E8F99;
+display: inline-block;
+margin-bottom: 4px;
+}
+.modal-input {
+border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 4px;
+width: 100%;
+background-color: transparent;
+outline: transparent;
+height: 40px;
+padding-left: 38px;
+}
+.modal-input:focus {
+    border-color: #4D5AE5;
+}
+.modal-icon {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+
+
+}
+.modal-input-wrap{
+    position: relative;
+}
+.modal-input:focus + .modal-icon {
+    fill: #4d5ae5;
+}
+.modal-coment {
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    background-color: transparent;
+    resize: none;
+    letter-spacing: 0.04em;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    padding: 8px 16px;
+    outline: transparent;
+}
+.modal-coment:focus {
+    border-color: #4d5ae5;
+
+}
+.chek-empty {
+    width: 16px;
+height: 16px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 2px;
+display: inline-flex;
+justify-content: center;
+align-items: center;
+fill: transparent;
+margin-right: 8px;
+}
+.input-chek:focus + .input-chek-text > .chek-empty {
+    background-color: #404bbf;
+    border: none;
+    fill: #fff;
+}
+.input-chek-text {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8E8F99;
+}
+.input-chek-link {
+    color: #4D5AE5;
+}
+.modal-fild.modal-fild-chek {
+    margin-bottom: 24px;
+}
+.modal-button {
+    font-family: 'Roboto', sans-serif;
+cursor: pointer;
+padding: 16px 32px;
+font-weight: 500;
+font-size: 16px;
+line-height: 24px;
+letter-spacing: 0.04em;
+color: #FFFFFF;
+background-color: #4D5AE5;
+border: none;
+margin: 0 auto;
+border-radius: 4px;
+max-width: 169px;
+display: block;
 }
